<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/navigationvbar_b_p" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/suishoupai"
            style="@style/AverageWidthMacthTextStyle"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/camera"
            android:gravity="center_horizontal"
            android:text="@string/suishoupai" />

        <TextView
            android:id="@+id/display"
            style="@style/AverageWidthMacthTextStyle"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/display"
            android:gravity="center_horizontal"
            android:text="@string/display" />

        <TextView
            android:id="@+id/suggest"
            style="@style/AverageWidthMacthTextStyle"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/suggest"
            android:gravity="center_horizontal"
            android:text="@string/suggest" />

        <TextView
            android:id="@+id/question"
            style="@style/AverageWidthMacthTextStyle"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/question"
            android:gravity="center_horizontal"
            android:text="@string/question" />
    </LinearLayout>

</LinearLayout>