<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/navigationvbar_b_p" />

    <com.shanghai.volunteer.other.parallax.ParallaxScrollView
        android:id="@+id/CallMeSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:zoomRatio="1.4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/callme"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:src="@drawable/white" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoLink="map"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/address" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:visibility="gone"
                android:text="@string/linkman" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:textColorLink="@color/gray"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/phonenum" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/fax" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:textColorLink="@color/gray"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/email" />

            <TextView
                style="@style/text_gray_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorLink="@color/gray"
                android:paddingTop="5dp"
                android:text="@string/contributor" />

            <TextView
                android:id="@+id/textView7"
                style="@style/text_gray_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/mailplane" />
        </LinearLayout>
    </com.shanghai.volunteer.other.parallax.ParallaxScrollView>

</LinearLayout>