<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/navigationvbar_b" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sign_in" />

                    <ImageView
                        android:id="@+id/addone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/game_add_one"
                        android:visibility="gone" />
                </LinearLayout>

                <com.shanghai.volunteer.activity.view.RoundedImageView
                    android:id="@+id/personlUserImageIV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/white"
                    app:border_color="#139266"
                    app:border_width="0dip"
                    app:corner_radius="10dip"
                    app:mutate_background="true"
                    app:oval="true" />

                <TextView
                    android:id="@+id/personlNameTV"
                    style="@style/text_white_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="40dp"
                    android:gravity="center_horizontal"
                    android:text="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/person_detail"
                    style="@style/text_gray_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/person_detail"
                    android:gravity="center_horizontal"
                    android:text="@string/person_detail" />

                <TextView
                    android:id="@+id/person_photo"
                    style="@style/text_gray_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/person_photo"
                    android:gravity="center_horizontal"
                    android:text="@string/person_photo" />

                <TextView
                    android:id="@+id/person_activity"
                    style="@style/text_gray_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/person_activity"
                    android:gravity="center_horizontal"
                    android:text="@string/person_activity" />

                <TextView
                    android:id="@+id/signin_record"
                    style="@style/text_gray_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/signin_record"
                    android:gravity="center_horizontal"
                    android:text="@string/signin_record" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/person_unicom"
                    style="@style/text_gray_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/person_unicom"
                    android:gravity="center_horizontal"
                    android:text="@string/unicom" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>