<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/navigationvbar_p_s" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/homeBannerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/bannerViewPagerControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/deep_white"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="25dp" >

                <TextView
                    android:id="@+id/news"
                    style="@style/AverageWidthMacthTextStyle"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/news"
                    android:gravity="center_horizontal"
                    android:text="@string/news" />

                <TextView
                    android:id="@+id/liantong"
                    style="@style/AverageWidthMacthTextStyle"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/unicom"
                    android:gravity="center_horizontal"
                    android:text="@string/lt" />

                <TextView
                    android:id="@+id/zhoubian"
                    style="@style/AverageWidthMacthTextStyle"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/zhoubian"
                    android:gravity="center_horizontal"
                    android:text="@string/zhoubian" />

                <TextView
                    android:id="@+id/more"
                    style="@style/AverageWidthMacthTextStyle"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/more"
                    android:gravity="center_horizontal"
                    android:text="@string/more" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/goto_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/activity_title" />

                    <ImageView
                        android:id="@+id/goto_volunteer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/menu_volunteer" />

                    <ImageView
                        android:id="@+id/goto_aboutus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:src="@drawable/menu_about" />

                    <ImageView
                        android:id="@+id/goto_callme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:src="@drawable/menu_contact" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mission"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/textview_bg_blue_white"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/text_white_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg_blue"
                        android:drawableLeft="@drawable/mission"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp"
                        android:text="项目任务" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/NewsTitle1"
                            style="@style/text_gray_14"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="" />

                        <TextView
                            android:id="@+id/NewsTitle2"
                            style="@style/text_gray_14"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="" />

                        <TextView
                            android:id="@+id/NewsTitle3"
                            style="@style/text_gray_14"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="" />

                        <TextView
                            android:id="@+id/NewsTitle4"
                            style="@style/text_gray_14"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>